--- a/src/LivreBundle/Resources/views/Jpo/Recherche.html.twig
+++ b/src/LivreBundle/Resources/views/Jpo/Recherche.html.twig
@@ -1,5 +1,43 @@
-{% extends "base.html.twig" %}
-{% block body %}
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<meta charset=utf-8>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>Recherche</title>
+	</head>
+
+	<body>
+		<div class="conteneur ">
+			<img class="baniere" src="Images/Baniere_02.png">
+
+			<div> <!-- Barre de navigation -->
+				<table class="topnav">
+					<tr>
+						<td id="topnav"></td>
+
+						<td id="topnav"> 
+							<img class="img_topnav" src="Images/Icones/Accueil_vert.png"> 
+							<a class="active" href="Accueil.html"> Accueil </a>
+						</td>
+
+						<td id="topnav"> <img class="img_topnav" src="Images/Icones/Compte_blanc.png"> <a class="menu" href="Compte.html"> Compte </a> 
+						</td>
+
+						<td id="topnav"> 
+							<img class="img_topnav" src="Images/Icones/Bibliotheque_blanc.png">
+							<a class="menu" href="Bibliotheque.html"> Bibliotheque </a> 
+						</td>
+
+						<td id="topnav"> 
+							<img class="img_topnav" src="Images/Icones/Question_blanc.png">
+							<a class="menu" href="A_Propos.html"> A propos </a> 
+						</td>
+						
+						<td id="topnav"></td>
+					</tr>	
+				</table>
+			</div> <!-- fin barre de navigation -->
+			
 			<br/> <br/>
 
 			<center>
@@ -61,4 +99,6 @@
 			
 
 
-{% endblock %}
+		</div> <!-- fin conteneur-->
+	</body>
+</html>
