--- a/web/css/style.css
+++ b/web/css/style.css
@@ -2,50 +2,15 @@ body {
      background-image:url("Images/Background-1.png");
 }
 
-
-/*****************************SmartPhone***************************************/
-/*@media screen and (min-width: 320px) and (max-width: 480px)
+/*****************************Ecran Petit**************************************/
+@media screen and (min-width: 960px) and (max-width: 1249px)
 {
-
-}*/
-
-/*****************************Tablette***************************************/
-/*@media screen and (min-width: 481px) and (max-width: 769px)
-{
-
-}*/
-
-/*****************************Ecran Moyen**************************************/
-@media screen /*and (min-width: 769px)*/ and (max-width: 1024px)
-{
-  /*div*/
   .conteneur {
     background-image:url("Images/Background-2.png");
 
-    width:95%;
+    width:90%;
     height: 100%;
     position:absolute;
-    margin-left: 2%;
-  }
-
-  .livres_ajoutes {
-    width: 90%
-  }
-
-  .div_apropos {
-    width: 80%;
-    margin-left: 10%;
-    background-image:url("Images/Background-1.png");
-  }
-
-  .div_fiche_livre {
-    background-image:url("Images/Background-1.png");
-      width: 70%;
-      margin-left: 15%;
-  }
-
-  .div_resume {
-    width: 90%;
     margin-left: 5%;
   }
 
@@ -63,8 +28,8 @@ body {
   }
 
   .main-nav {
-    width: 100%;
-    margin-left: 2%;
+     width: 80%;
+     margin-left: 15%;
   }
 
   .main-nav li {
@@ -95,135 +60,6 @@ body {
   }
 
   /******************************************************************************/
-  /*formulaires*/
-  .div_form_conn {
-    height: 30%;
-    width: 40%;
-    padding-top: 10%;
-    padding-left: 30%;
-  }
-
-  .div_form_inscr {
-    padding-left: 25%;
-  }
-
-  .div_form_ajout {
-    padding-left: 25%;
-  }
-
-  .div_form_suppr {
-    padding-left: 25%;
-  }
-
-  fieldset {
-     max-width:80%;
-     border-color:  #00B050;
-     background-image:url("Images/Background-1.png");
-  }
-
-  legend {
-    padding: 0px 3px;
-    font-weight: bold;
-    font-variant: small-caps;
-
-    font-family: Arial;
-    font-size: 16px;
-  }
-
-  label {
-    width: 110px;
-    display: inline-block;
-    vertical-align: top;
-    margin: 6px;
-
-    font-family: Arial;
-    font-size: 14px;
-  }
-
-  em {
-    font-weight: bold;
-    font-style: normal;
-    color: red;
-  }
-
-  form {
-    width: 600px;
-  }
-
-  /******************************************************************************/
-  /*table, td, tr*/
-
-  table {
-    /*border: 2px solid #00B050;*/
-    background-color: white;
-  }
-
-  .tab_livre {
-    width: 80%;
-    margin-left: 10%;
-    background-image:url("Images/Background-2.png");
-  }
-
-  .td_livre {
-    width:25%;
-    border: 2px solid #00B050;
-    background-image:url("Images/Background-1.png");
-    text-align: center;
-  }
-
-  /******************************************************************************/
-  /*textes*/
-
-  h1 {
-      color: #ED7D31;
-      font-family:"Comic Sans MS";
-      font-size: 30px;
-      font-weight: bold;
-      text-align: center;
-  }
-
-  h2 {
-    color: #00B050;
-    font-family: "Comic Sans MS";
-    font-size: 20px;
-    font-weight: bold;
-    text-align: center;
-  }
-
-  h3 {
-    color: #000000;
-    font-family: Arial;
-    font-size: 16px;
-    font-weight: bold;
-    text-align: center;
-  }
-
-  h4 {
-    color: #000000;
-    font-family: Arial;
-    font-size: 12px;
-    font-weight: bold;
-  }
-
-  p {
-    text-align: justify;
-    font-family: Arial;
-    font-size: 12px;
-  }
-
-  .resume {
-    padding-right: 10px;
-  }
-
-  .livr_titre {
-    color: #000000;
-    font-family:"Comic Sans MS";
-    font-size: 16px;
-    font-weight: bold;
-    margin-left: 10%
-  }
-
-  /*****************************************************************************/
   /*images*/
 
   .baniere {
@@ -239,86 +75,98 @@ body {
     width: 10px;
     height: 10px;
   }
+
   /******************************************************************************/
-}
+  /*textes*/
 
-
-/*****************************Grand Ecran**************************************/
-@media screen and (min-width: 1025px)
-{
-  /*div*/
-  .conteneur {
-    background-image:url("Images/Background-2.png");
-
-    width:80%;
-    height: 100%;
-    position:absolute;
-    margin-left: 10%;
+  h1 {
+      color: #ED7D31;
+      font-family:"Comic Sans MS";
+      font-size: 30px;
+      font-weight: bold;
+      text-align: center;
   }
 
-.livres_ajoutes {
-    width: 90%;
-  }
-
-.div_apropos {
-  width: 70%;
-  margin-left: 15%;
-  background-image:url("Images/Background-1.png");
-}
-
-.div_fiche_livre {
-  background-image:url("Images/Background-1.png");
-    width: 70%;
-    margin-left: 15%;
-}
-
-.div_resume {
-  width: 90%;
-  margin-left: 5%;
-}
-  /****************************************************************************/
-  /*menu*/
-  .header {
-    width: 100%;
-    background-color: #000000;
-    height: 6%;
-  }
-
-  .navigation {
-    float:left;
-    width: 100%;
-  }
-
-  .main-nav {
-     width: 80%;
-     margin-left: 20%;
-  }
-
-  .main-nav li {
-    float:left;
-    list-style-type: none;
-    width: 200px;
+  h2 {
+    color: #00B050;
+    font-family: "Comic Sans MS";
+    font-size: 20px;
+    font-weight: bold;
     text-align: center;
   }
 
-  .main-nav li a {
-    line-height: 32px;
-    text-decoration: none;
-    width: 200px;
+  h3 {
+    color: #000000;
+    font-family: Arial;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+  }
 
-    color: white;
-    font-family:"Comic Sans MS";
-    font-size: 16px;
+  h4 {
+    color: #000000;
+    font-family: Arial;
+    font-size: 12px;
     font-weight: bold;
   }
 
-  .main-nav li:hover {
-    background-color: #00B050;
+  p {
+    text-align: center;
+    font-family: Arial;
+    font-size: 12px;
   }
 
-  .img_topnav {
-    width: 20px;
-    height: 20px;
+  .resume {
+    padding-right: 10px;
+  }
+
+  .livr_titre {
+    color: #000000;
+    font-family:"Comic Sans MS";
+    font-size: 16px;
+    font-weight: bold;
+    margin-left: 10%
+  }
+
+  /******************************************************************************/
+  /*Accueil*/
+
+  .livres_ajoutes {
+    width: 100%
+  }
+
+  .tab_livre {
+    width: 60%;
+    margin-left: 5%;
+    background-image:url("Images/Background-2.png");
+  }
+
+  .td_livre {
+    width:25%;
+    border: 2px solid #00B050;
+    background-image:url("Images/Background-1.png");
+    text-align: center;
+  }
+
+  /******************************************************************************/
+  /*Recherche*/
+  .div_resultat {
+    width: 80%;
+    padding-left: 10%;
+  }
+
+  .tab_result {
+    border: 2px solid #00B050;
+  }
+
+  .tab_result tr {
+    background-image:url("Images/Background-1.png");
+    border: 2px solid #00B050;
+  }
+
+  .tab_result td, th {
+    text-align: center;
+    width: 5%;
   }
 
   /******************************************************************************/
@@ -327,20 +175,15 @@ body {
     height: 30%;
     width: 40%;
     padding-top: 10%;
-    padding-left: 30%;
+    padding-left: 35%;
   }
 
   .div_form_inscr {
     padding-left: 35%;
   }
 
-  .div_form_ajout {
+  .div_form_recherche {
     padding-left: 35%;
-  }
-
-  .div_form_suppr {
-    padding-left: 35%;
-    padding-top: 5%;
   }
 
   fieldset {
@@ -378,35 +221,82 @@ body {
     width: 600px;
   }
 
-  input{
-    width: 55%;
-  }
-  #resume {
-    width: 55%;
-    height: 75%;
-  }
+  /******************************************************************************/
+}
 
-  /*****************************************************************************/
-  /*table, td, tr*/
-
-  table {
-    /*border: 2px solid #00B050;*/
-    background-color: white;
-  }
-
-  .tab_livre {
-    width: 80%;
-    margin-left: 10%;
+/*****************************Grand Ecran**************************************/
+@media screen and (min-width:1632px)
+{
+  .conteneur {
     background-image:url("Images/Background-2.png");
+
+    width:80%;
+    height: 100%;
+    position:absolute;
+    margin-left: 10%;
   }
 
-  .td_livre {
-    width:25%;
-    border: 2px solid #00B050;
-    background-image:url("Images/Background-1.png");
+  /****************************************************************************/
+  /*menu*/
+  .header {
+    width: 100%;
+    background-color: #000000;
+    height: 6%;
+  }
+
+  .navigation {
+    float:left;
+    width: 100%;
+  }
+
+  .main-nav {
+     width: 80%;
+     margin-left: 15%;
+  }
+
+  .main-nav li {
+    float:left;
+    list-style-type: none;
+    width: 200px;
     text-align: center;
   }
 
+  .main-nav li a {
+    line-height: 32px;
+    text-decoration: none;
+    width: 200px;
+
+    color: white;
+    font-family:"Comic Sans MS";
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  .main-nav li:hover {
+    background-color: #00B050;
+  }
+
+  .img_topnav {
+    width: 20px;
+    height: 20px;
+  }
+
+  /******************************************************************************/
+  /*images*/
+
+  .baniere {
+    width: 100%;
+  }
+
+  .img_livre {
+    width: 250px;
+    height: 350px;
+  }
+
+  .img_suppr {
+    width: 10px;
+    height: 10px;
+  }
 
   /******************************************************************************/
   /*textes*/
@@ -430,7 +320,7 @@ body {
   h3 {
     color: #000000;
     font-family: Arial;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: bold;
     text-align: center;
   }
@@ -461,26 +351,97 @@ body {
   }
 
   /******************************************************************************/
-  /*images*/
+  /*Accueil*/
 
-  .baniere {
-    width: 100%;
+  .livres_ajoutes {
+    width: 100%
   }
 
-  .img_livre {
-    width: 250px;
-    height: 350px;
+  .tab_livre {
+    width: 80%;
+    margin-left: 8%;
+    background-image:url("Images/Background-2.png");
   }
 
-  .img_fiche_livre {
-    width: 250px;
-    height: 350px;
-    padding-left: 40%;
+  .td_livre {
+    width:25%;
+    border: 2px solid #00B050;
+    background-image:url("Images/Background-1.png");
+    text-align: center;
   }
 
-  .img_suppr {
-    width: 10px;
-    height: 10px;
+  /******************************************************************************/
+  /*Recherche*/
+  .div_resultat {
+    width: 80%;
+    padding-left: 10%;
   }
+
+  .tab_result {
+    border: 2px solid #00B050;
+  }
+
+  .tab_result tr {
+    background-image:url("Images/Background-1.png");
+    border: 2px solid #00B050;
+  }
+
+  .tab_result td, th {
+    text-align: center;
+    width: 5%;
+  }
+
+  /******************************************************************************/
+  /*formulaires*/
+  .div_form_conn {
+    height: 30%;
+    width: 40%;
+    padding-top: 10%;
+    padding-left: 35%;
+  }
+
+  .div_form_inscr {
+    padding-left: 35%;
+  }
+
+  .div_form_recherche {
+    padding-left: 35%;
+  }
+
+  fieldset {
+     max-width:80%;
+     border-color:  #00B050;
+     background-image:url("Images/Background-1.png");
+  }
+
+  legend {
+    padding: 0px 3px;
+    font-weight: bold;
+    font-variant: small-caps;
+
+    font-family: Arial;
+    font-size: 16px;
+  }
+
+  label {
+    width: 110px;
+    display: inline-block;
+    vertical-align: top;
+    margin: 6px;
+
+    font-family: Arial;
+    font-size: 14px;
+  }
+
+  em {
+    font-weight: bold;
+    font-style: normal;
+    color: red;
+  }
+
+  form {
+    width: 600px;
+  }
+
   /******************************************************************************/
 }
