--- a/src/UserBundle/Resources/views/User/Compte.html.twig
+++ b/src/UserBundle/Resources/views/User/Compte.html.twig
@@ -8,7 +8,7 @@
 					<option>Off</option>
 				</select>
 
-				<button id="deconnexion" value"deconnexion"> Se deconnecter </button>
+				<button id="deconnexion" value="deconnexion"> Se deconnecter </button>
 
 			</div> <!-- fin top -->
 
@@ -29,7 +29,7 @@
 				<form>
 					<tr> 
 						<td>
-							<label for"mail">Titre *</label>
+							<label for="mail">Titre *</label>
 							<input id="mail"> </input>
 							</br> </br>
 
