--- a/src/UserBundle/Resources/views/User/Connexion.html.twig
+++ b/src/UserBundle/Resources/views/User/Connexion.html.twig
@@ -7,7 +7,7 @@
 						<form>
 							<tr>
 								<td>
-									<label for"mail">E-mail</label>
+									<label for="mail">E-mail</label>
 									<input type="text" id="mail"> </input>
 									</br> </br>
 
