--- a/src/LivreBundle/Resources/views/Jpo/Ma_Bibliotheque.html.twig
+++ b/src/LivreBundle/Resources/views/Jpo/Ma_Bibliotheque.html.twig
@@ -54,8 +54,11 @@
 							{% for livre in livres %}
 
 								<td class="td_livre">
-									<a href=""> <img class="img_livre" src="{{ asset(livre.imageLivre.webPath) }}"> </a> <br/>
-									 {{ livre.titre }}<br/> {{ livre.auteur }}, {{ livre.editeur }}
+                                                                    <a href="">
+                                                                    {% if livre.imageLivre is not null %}
+                                                                        <img class="img_livre" src="{{ asset(livre.imageLivre.getwebPath()) }}">
+                                                                    {% endif %}
+                                                                    {{ livre.titre }}<br/> {{ livre.auteur }}, {{ livre.editeur }}</a> <br/>
 								</td>
 
 							{% endfor %}
