--- a/src/LivreBundle/Resources/views/Jpo/ajout.html.twig
+++ b/src/LivreBundle/Resources/views/Jpo/ajout.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 
 
-  {{ form_start(form, {'attr': {'class': ''}}) }}
+  {{ form_start(form, {'attr': {'class': 'div_form_ajout'}}) }}
     {{ form_errors(form) }}
 
     {{ form_rest(form) }}
