--- a/src/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/UserBundle/Resources/views/Security/login.html.twig
@@ -7,12 +7,13 @@
 {% if error %}
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
-
-<form action="{{ path("fos_user_security_check") }}" method="post">
-    {% if csrf_token %}
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-    {% endif %}
-
+{% if csrf_token %}
+    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />   
+{% endif %}
+<div class="div_form_conn">
+<form class="form_conn" action="{{ path("fos_user_security_check") }}" method="post">
+    <legend>Connexion</legend>
+    <fieldset>
     <div><label for="username">{{ 'security.login.username'|trans }}</label>
     <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" /></div>
 
@@ -21,7 +22,9 @@
 
     <div><input type="checkbox" id="remember_me" name="_remember_me" value="on" />
     <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label></div>
-
+    <h4>Pas encore inscrit ? <a href="{{ path('fos_user_registration_register') }}"> Cliquez ici </a> </h4>
     <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+    </fieldset>
 </form>
+</div>
 {% endblock body %}
