--- a/src/UserBundle/Resources/views/User/Connexion.html.twig
+++ b/src/UserBundle/Resources/views/User/Connexion.html.twig
@@ -1,30 +1,27 @@
+{% trans_default_domain 'FOSUserBundle' %}
 {% extends "base.html.twig" %}
+
 {% block body %}
 
-			<div class="div_form">
-				<center>
-					<table class="tab_form">
-						<form>
-							<tr>
-								<td>
-									<label for="mail">E-mail</label>
-									<input type="text" id="mail"> </input>
-									</br> </br>
+<br/><br/>
+{% if error %}
+    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+{% endif %}
 
-									<label>Mot de passe</label>
-									<input type="password" id="pswd"> </input>
-									</br> </br>
-								</td>
+<form action="{{ path("fos_user_security_check") }}" method="post">
+    {% if csrf_token %}
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+    {% endif %}
 
-								<td>
-									<p> Pas encore de compte ? Venez nous rejoindre 
-										<a href="Inscription.html"> ici </a>  
-									</p>
-									<input type="submit" value="Confirmer">
-								</td>
-							</tr>
-						</form>
-					</table>
-				</center>
-			</div> <!-- fin div_form -->
-{% endblock %}
+    <div><label for="username">{{ 'security.login.username'|trans }}</label>
+    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" /></div>
+
+    <div><label for="password">{{ 'security.login.password'|trans }}</label>
+    <input type="password" id="password" name="_password" required="required" /></div>
+
+    <div><input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label></div>
+
+    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+</form>
+{% endblock body %}
